<resources>
    <string name="app_name" translatable="false">MediaAttachments</string>
    <string name="greetings_text">Добро пожаловать в\nLeadFrog!</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="do_cancel">Отменить</string>
    <string name="company_title">Компания</string>
    <string name="searching">Поиск</string>
    <string name="close">ЗАКРЫТЬ</string>
    <string name="network_error">Пропало соединение с сервером</string>
    <string name="server_unknown_error">Нет соединения с интернетом</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="make_choice">Выбрать</string>
    <string name="change">Изменить</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="done">Готово</string>
    <string name="clear">Очистить</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="deny">Отказаться</string>
    <string name="accept">Принять</string>
    <string name="choose_event">Выберите выставку</string>
    <string name="no_events">Выставок нет</string>
    <string name="visitor">Посетитель</string>
    <string name="standman">Участник</string>
    <string name="who_are_you_choose_role">Выбор роли</string>
    <string name="choose_company_button">Выберите компанию</string>
    <string name="support">Техподдержка</string>
    <string name="pay_free_in_russia_choose_role">Бесплатно по РФ</string>
    <string name="chat_with_support">Чат с техподдержкой</string>
    <string name="online_word">Онлайн</string>
    <string name="registration_error_choosing_company">Выберите, пожалуйста, компанию. Если вашей компании нет в списке, то обратитесь в техподдержку</string>
    <string name="error_loading_companies_by_event">Не удалось загрузить компании для выставки. Обратитесь в техподдержку</string>
    <string name="register">Регистрация</string>
    <string name="title_last_name">Фамилия</string>
    <string name="placeholder_last_name">Введите фамилию</string>
    <string name="title_first_name">Имя</string>
    <string name="placeholder_first_name">Введите имя</string>
    <string name="title_email">Электронная почта</string>
    <string name="another_another_placeholder_email">Введите почту</string>
    <string name="title_phone">Телефон</string>
    <string name="another_another_placeholder_phone">Введите номер телефона</string>
    <string name="title_confirm_code">Подтверждение телефона</string>
    <string name="placeholder_confirm_code">Введите код</string>
    <string name="send_code_button">Выслать код</string>
    <string name="agreement2">Пользовательское соглашение</string>
    <string name="do_register">Зарегистрироваться</string>
    <string name="need_to_enter_last_name">Необходимо ввести фамилию</string>
    <string name="need_to_enter_first_name">Необходимо ввести имя</string>
    <string name="need_to_enter_email">Необходимо ввести почту</string>
    <string name="need_to_enter_phone_number">Необходимо ввести номер телефона</string>
    <string name="error_wrong_confirm_code">Введён неверный СМС-код</string>
    <string name="error_wrong_format_phone_number">Введён неверный телефон</string>
    <string name="error_wrong_format_email">Введен неверный формат почты</string>
    <string name="need_to_enter_confirm_code">Необходимо ввести СМС-код</string>
    <string name="badge_number_title">Номер бейджа</string>
    <string name="placeholder_badge_number">Введите номер бейджа</string>
    <string name="scan_badge">Сканировать свой бейдж</string>
    <string name="error_wrong_badge_number">Введен неверный номер бейджа</string>
    <string name="point_the_camera">Наведите камеру\n на штрих-код своего бейджа</string>
    <string name="point_the_camera_profile">Наведите камеру на штрихкод\nбейджа посетителя, чтобы сделать\nего стендистом вашей компании.</string>
    <string name="send_data_to_email">Отправить собранные\nданные  на почту</string>
    <string name="my_data">Мои данные</string>
    <string name="my_contacts">Мои контакты</string>
    <string name="about_me">О себе</string>
    <string name="my_links">Ссылки</string>
    <string name="questions_and_answers">вопросы и ответы</string>
    <string name="settings_word">Параметры</string>
    <string name="profile_support">Поддержка</string>
    <string name="lets_exit_from_account">Выйти из аккаунта</string>
    <string name="send_history">Отправка истории</string>
    <string name="enter_your_email">Введите ваш e-mail</string>
    <string name="send">Отправить</string>
    <string name="exit_from_account">Выход из аккаунта</string>
    <string name="confirm_exit_from_account">Вы действительно хотите выйти?</string>
    <string name="exit">Выйти</string>
    <string name="question_make_visitor_as_standman">Сделать этого посетителя сотрудником вашей компании?</string>
    <string name="badge_is_not_a_visitor">Возникла ошибка при добавлении нового участника. Возможно, бейдж, который вы сканируете, не является бейджем посетителя.</string>
    <string name="visitor_standman_request_successful">Приглашение в компанию отправлено</string>
    <string name="exit_from_company_profile">Выход из компании</string>
    <string name="ask_about_exiting_from_company">Вы действительно хотите выйти?</string>
    <string name="you_are_invited_to_company">Вас пригласили в компанию</string>
    <string name="now_you_are_in_company">Стать сотрудником компании</string>
    <string name="badge_not_found">Бейдж не найден</string>
    <string name="add_visitor_to_company">Cделать сотрудником</string>
    <string name="exit_from_company">Выйти из компании</string>
    <string name="my_company">Моя компания</string>
    <string name="pop_up_exit">Выйти</string>
    <string name="position_title">Должность</string>
    <string name="description">Описание</string>
    <string name="one_contact">Контакт</string>
    <string name="title_word">Заголовок</string>
    <string name="placeholder_contact_title">Введите заголовок</string>
    <string name="address_title">Адрес</string>
    <string name="another_placeholder_site">Введите ссылку</string>
    <string name="add_contact">Добавить контакт</string>
    <string name="placeholder_phone_number">Введите номер</string>
    <string name="choose_country">Выбор страны</string>
    <string name="placeholder_postcode">Индекс</string>
    <string name="placeholder_country">Страна</string>
    <string name="placeholder_region">Регион</string>
    <string name="placeholder_city">Город</string>
    <string name="another_placeholder_address">Улица, дом</string>
    <string name="language_russian" translatable="false">Русский</string>
    <string name="choose_language_title">Выбор языка</string>
    <string name="available_languages">Доступные языки</string>
    <string name="language_title">Язык</string>
    <string name="title_general">Общий</string>
    <string name="no_data_yet">Данных ещё нет</string>
    <string name="lets_scan_your_first_shard">Для того, чтобы начать собирать данные,\nотсканируйте QR-код или штрихкод</string>
    <string name="scan">Сканировать</string>
    <string name="how_to_start_scanning">Как начать сканировать?</string>
    <string name="wizard_to_start_scanning">Чтобы сканировать - </string>
    <string name="wizard_tap_on_central_button">\ нажмите на центральную кнопку </string>
    <string name="wizard_in_bottom_nav">\ в нижней навигации.</string>
    <string name="wizard_place_camera">Наведите камеру </string>
    <string name="wizard_place_camera_second_part">\ на штрих-код бейджа, QR-код продукции или стенда компании.</string>
    <string name="how_to_fill_survey">Как заполнить анкету?</string>
    <string name="wizard_scan">Отсканируйте </string>
    <string name="wizard_scan_second_part">\ бейдж посетителя или участника.</string>
    <string name="wizard_go_to">Перейдите </string>
    <string name="wizard_go_to_second_part">\ в раздел </string>
    <string name="wizard_surveys">\ “Анкеты” </string>
    <string name="wizard_go_to_third_part">\ в нижнем меню.</string>
    <string name="wizard_fill_in">Заполните </string>
    <string name="wizard_fill_in_second_part">\ анкету.</string>
    <string name="how_to_create_a_note">Как сделать заметку?</string>
    <string name="wizard_notes_scan_second_part">\ бейдж, продукт или компанию, к которой хотите оставить заметку.</string>
    <string name="wizard_go_to_notes">\ в раздел заметок.</string>
    <string name="wizard_tap">Нажмите: </string>
    <string name="wizard_tap_second_part">\ “Добавить заметку”.</string>
    <string name="wizard_fourth_step_tap">Нажмите </string>
    <string name="how_to_export_data">Как выгрузить данные?</string>
    <string name="wizard_enter_in">Зайдите </string>
    <string name="wizard_your_profile">\ в ваш профиль.</string>
    <string name="wizard_button">\ кнопку: </string>
    <string name="wizard_collected_data">\ “Отправить собранные данные на почту”.</string>
    <string name="ok">Понятно</string>
    <string name="toolbar_change_view_shardlist">Вид данных</string>
    <string name="title_companies">Компании</string>
    <string name="title_users">Бейджи</string>
    <string name="title_production">Продукция</string>
    <string name="title_pending">Незагруженные</string>
    <string name="title_forms">Анкеты</string>
    <string name="creating_the_card">Создание карточки</string>
    <string name="text_on_main_camera">Наведите камеру и отсканируйте:\nШтрихкод на бейдже, QR-код на продукции, QR-код на флажке с номером стенда</string>
    <string name="create_the_card_manually">Создать карточку вручную</string>
    <string name="about_company">О компании</string>
    <string name="full_detail">Полностью</string>
    <string name="event_word">выставка</string>
    <string name="stand_word">стенд</string>
    <string name="creation_date">дата создания</string>
    <string name="contacts">Контакты</string>
    <string name="survey">Анкета</string>
    <string name="my_notes">Мои заметки</string>
    <string name="survey_error_no_surveys">Вы не составили анкету\nЕё можно создать в личном кабинете</string>
    <string name="survey_error_download">Ошибка загрузки анкеты</string>
    <string name="waiting_for_data">Ожидание данных</string>
    <string name="data_in_progress_from_server">Данные подгружаются с сервера</string>
    <string name="no_notes_yet">Заметок ещё нет</string>
    <string name="add_note_button">Добавить заметку</string>
    <string name="edit">Редактировать</string>
    <string name="make_copy">Скопировать</string>
    <string name="one_note">Заметка</string>
    <string name="choose_survey">Выбор анкеты</string>
    <string name="didnt_fill_all_important_questions">Вы не заполнили все\nважные вопросы</string>
    <string name="surveys_exit">Выйти</string>
    <string name="fill_in">Заполнить</string>
    <string name="important_question">Важный вопрос</string>
    <string name="another_answer">Другой ответ</string>
    <string name="text_answer">текст…</string>
    <string name="scan_qr_or_business_card">Сканировать визитку / QR-контакт</string>
    <string name="import_contact">Импорт контакта из телефона</string>
    <string name="card_recognition">Распознавание визитки</string>
    <string name="send_image">Отправка фотографии</string>
    <string name="data_loading">Обработка данных</string>
    <string name="add_sign">Добавить подпись</string>
    <string name="sign">Подпись</string>
    <string name="sign_added">Подпись поставлена</string>
    <string name="sign_again">Расписаться заново</string>
    <string name="hold_the_current_sign">Оставить текущую</string>
    <string name="new_version_dialog_title">Для продолжения работы необходимо обновиться</string>
    <string name="new_version_dialog_subtitle">Вышло важное обновление</string>
    <string name="new_version_go_to_market">Открыть Google Play</string>
</resources>