<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pop_up_update_alert_main_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_pop_up_overlay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pop_up_update_alert_content_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/bg_pop_up_update"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="18dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pop_up_update_alert_main_header_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/sf_pro_semibold"
            android:gravity="center"
            android:text="@string/new_version_dialog_title"
            android:textColor="@color/black"
            android:textSize="@dimen/default_17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pop_up_update_alert_secondary_header_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/sf_pro_regular"
            android:gravity="center"
            android:text="@string/new_version_dialog_subtitle"
            android:textColor="@color/black"
            android:textSize="@dimen/default_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_update_alert_main_header_tv" />


        <TextView
            android:id="@+id/pop_up_update_alert_action_skip_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_default_button_states"
            android:fontFamily="@font/sf_pro_semibold"
            android:gravity="center"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:text="@string/new_version_go_to_market"
            android:textColor="@color/white"
            android:textSize="@dimen/default_17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_update_alert_secondary_header_tv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12037037" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8796296" />


</androidx.constraintlayout.widget.ConstraintLayout>
