<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pop_up_image_loading_main_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_pop_up_overlay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pop_up_image_loading_content_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:alpha="1"
        android:background="@drawable/bg_pop_ups_corners_14"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pop_up_image_loading_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_bold"
            android:text="@string/card_recognition"
            android:textColor="@color/app_black"
            android:textSize="@dimen/default_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/pop_up_image_loading_image_cv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:cardBackgroundColor="@color/app_black"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4">

            <ImageView
                android:id="@+id/pop_up_image_loading_image_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_pop_ups" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/pop_up_image_loading_secondary_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/send_image"
            android:textSize="@dimen/default_17sp"
            android:fontFamily="@font/sf_pro_bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_image_loading_image_cv" />

        <TextView
            android:id="@+id/pop_up_image_loading_secondary_header_second_step_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:alpha="0"
            android:fontFamily="@font/sf_pro_bold"
            android:text="@string/data_loading"
            android:textColor="@color/app_green"
            android:textSize="@dimen/default_17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_image_loading_image_cv" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pop_up_image_loading_progress_indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:progress="0"
            app:indicatorColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pop_up_image_loading_secondary_header_tv"
            app:trackColor="@color/bg_primary"
            app:trackCornerRadius="5dp" />


        <TextView
            android:id="@+id/pop_up_image_loading_progress_indicator_percent_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="0%"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_image_loading_progress_indicator" />

        <TextView
            android:id="@+id/pop_up_image_loading_cancel_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/bg_default_button_states"
            android:fontFamily="@font/sf_pro_semibold"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/do_cancel"
            android:textColor="@color/color_white"
            android:textSize="@dimen/default_17sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pop_up_image_loading_progress_indicator_percent_tv" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12007505" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.61" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
