<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pop_up_edits_overlay_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_pop_up_overlay">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pop_up_edits_content_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/bg_pop_ups_8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/pop_up_item_media_note"
            layout="@layout/pop_up_item_media_note"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/pop_up_item_contact"
            layout="@layout/item_link"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/pop_up_edits_options_cl"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop_up_edits_content_cl">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/pop_up_edits_options_copy_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_button_states"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/sf_pro_semibold"
                android:paddingStart="11dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/make_copy"
                android:textColor="@color/app_black"
                android:textSize="@dimen/default_17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pop_up_edits_options_copy_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/pop_up_edits_options_copy_tv"
                app:layout_constraintEnd_toEndOf="@+id/pop_up_edits_options_copy_tv"
                app:layout_constraintTop_toTopOf="@+id/pop_up_edits_options_copy_tv"
                app:srcCompat="@drawable/edits_copy" />

            <View
                android:id="@+id/pop_up_edits_content_edit_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/pop_up_edits_divider_color"
                app:layout_constraintBottom_toBottomOf="@+id/pop_up_edits_options_copy_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/pop_up_edits_options_edit_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_button_states"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/sf_pro_semibold"
                android:paddingStart="11dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/edit"
                android:textColor="@color/app_black"
                android:textSize="@dimen/default_17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pop_up_edits_options_copy_tv" />

            <ImageView
                android:id="@+id/pop_up_edits_options_edit_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toTopOf="@+id/pop_up_edits_options_delete_tv"
                app:layout_constraintEnd_toEndOf="@+id/pop_up_edits_options_edit_tv"
                app:layout_constraintTop_toTopOf="@+id/pop_up_edits_options_edit_tv"
                app:srcCompat="@drawable/edits_edit" />

            <View
                android:id="@+id/pop_up_edits_content_delete_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/pop_up_edits_divider_color"
                app:layout_constraintBottom_toBottomOf="@+id/pop_up_edits_options_edit_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/pop_up_edits_options_delete_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_button_states"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/sf_pro_semibold"
                android:paddingStart="11dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/delete"
                android:textColor="@color/app_red"
                android:textSize="@dimen/default_17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pop_up_edits_options_edit_tv" />

            <ImageView
                android:id="@+id/pop_up_edits_options_delete_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/pop_up_edits_options_delete_tv"
                app:layout_constraintEnd_toEndOf="@+id/pop_up_edits_options_delete_tv"
                app:layout_constraintTop_toTopOf="@+id/pop_up_edits_options_delete_tv"
                app:srcCompat="@drawable/edits_remove" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
